--- a/webapp/src/features/properties/components/PropertyCard/PropertyCard.scss
+++ b/webapp/src/features/properties/components/PropertyCard/PropertyCard.scss
@@ -1,5 +1,6 @@
 .property-card {
   margin-bottom: 20px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border:none;
+  border: none;
+  width: 100%;
 }
