--- a/webapp/src/features/properties/components/PropertyDetails/PropertyDetails.module.scss
+++ b/webapp/src/features/properties/components/PropertyDetails/PropertyDetails.module.scss
@@ -7,16 +7,16 @@
   &__price {
     font-size: 20px;
     font-weight: 600;
-    margin-top: 20px;
+    margin-top: 5px;
   }
 
   &__address {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 
   &__dimensions {
     div {
-      margin-top: 20px;
+      margin-top: 10px;
     }
   }
 
@@ -25,7 +25,17 @@
     font-weight: 600;
     margin-top: 20px;
     div {
-      font-size: 14px;
+      font-size: 15px;
+      font-weight: normal;
+    }
+  }
+
+  &__realtor {
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 15px;
+    div {
+      font-size: 15px;
       font-weight: normal;
     }
   }
