--- a/webapp/src/features/properties/components/PropertyCard/PropertyCard.module.scss
+++ b/webapp/src/features/properties/components/PropertyCard/PropertyCard.module.scss
@@ -3,4 +3,26 @@
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   border: none;
   width: 100%;
+
+  &__title {
+    height: 48px;
+    max-height: 48px;
+    text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+  }
+
+  &__address {
+    height: 48px;
+    max-height: 48px;
+    text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+  }
 }
