--- a/webapp/src/features/properties/pages/PropertyListPage/PropertyListPage.module.scss
+++ b/webapp/src/features/properties/pages/PropertyListPage/PropertyListPage.module.scss
@@ -6,4 +6,16 @@
   &__list::-webkit-scrollbar {
     display: none;
   }
+  &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+
+    &-title {
+      font-size: 22px;
+      font-weight: 550;
+    }
+  }
 }
