Adds functionality to see apartment details on map and click on it

--- a/webapp/src/features/properties/pages/PropertyListPage/PropertyListPage.module.scss
+++ b/webapp/src/features/properties/pages/PropertyListPage/PropertyListPage.module.scss
@@ -18,4 +18,10 @@
       font-weight: 550;
     }
   }
+
+  &__map-property {
+    margin-top: 16px;
+    margin-left: 16px;
+    width: 200px;
+  }
 }
