--- a/webapp/src/index.scss
+++ b/webapp/src/index.scss
@@ -1,115 +1,8 @@
-$customprimary: #157dff;
-$primary: #157dff;
-
 @import '../node_modules/bootstrap/scss/bootstrap';
+@import './app/assets/styles/boostrap-overrides';
 
 body,
 html,
 #root {
   height: 100%;
-}
-
-.btn-primary {
-  @include button-variant(
-    $customprimary,
-    $customprimary,
-    #ffffff,
-    darken($customprimary, 5%),
-    darken($customprimary, 5%),
-    #ffffff,
-    $customprimary,
-    $customprimary,
-    #ffffff,
-    lighten($customprimary, 5%),
-    lighten($customprimary, 5%),
-    #ffffff
-  );
-}
-
-.btn-outline-primary {
-  @include button-outline-variant(
-    $customprimary,
-    #ffffff,
-    $customprimary,
-    $customprimary,
-    #ffffff
-  );
-}
-
-.card {
-  background: #fff;
-  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
-    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
-  cursor: pointer;
-}
-
-.card:hover {
-  transform: scale(1.05);
-}
-/* enable absolute positioning */
-.inner-addon {
-  position: relative;
-}
-
-/* style icon */
-.inner-addon .glyphicon {
-  position: absolute;
-  padding: 10px;
-  pointer-events: none;
-}
-
-/* align icon */
-.left-addon .glyphicon {
-  left: 0px;
-}
-.right-addon .glyphicon {
-  right: 0px;
-}
-
-/* add padding  */
-.left-addon input {
-  padding-left: 30px;
-}
-.right-addon input {
-  padding-right: 30px;
-}
-
-.badge-danger {
-  background-color: #b94a48;
-}
-
-.badge-error:hover {
-  background-color: #953b39;
-}
-
-.badge-warning {
-  background-color: #f89406;
-}
-
-.badge-warning:hover {
-  background-color: #c67605;
-}
-
-.badge-success {
-  background-color: #468847;
-}
-
-.badge-success:hover {
-  background-color: #356635;
-}
-
-.badge-info {
-  background-color: #3a87ad;
-}
-
-.badge-info:hover {
-  background-color: #2d6987;
-}
-
-.badge-inverse {
-  background-color: #333333;
-}
-
-.badge-inverse:hover {
-  background-color: #1a1a1a;
 }
