--- a/webapp/src/app/components/RangeInput/RangeInput.module.scss
+++ b/webapp/src/app/components/RangeInput/RangeInput.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables';
+
 .range-input {
   margin-bottom: 40px;
 
@@ -5,6 +7,7 @@
     font-size: 16px;
     font-weight: 550;
   }
+
   &__label-container {
     display: flex;
     flex-direction: row;
@@ -13,7 +16,7 @@
   }
 
   &__label-values {
-    color: #157dff;
+    color: $primary;
     font-size: 14px;
   }
 }
