--- a/webapp/src/app/assets/styles/_variables.scss
+++ b/webapp/src/app/assets/styles/_variables.scss
@@ -1,3 +1,6 @@
+@import '../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../node_modules/bootstrap/scss/variables';
+
 $primary: #157dff;
 
 $theme-colors: (
