--- a/webapp/src/features/properties/components/PropertyFilters/PropertyFilters.module.scss
+++ b/webapp/src/features/properties/components/PropertyFilters/PropertyFilters.module.scss
@@ -9,8 +9,12 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      margin-bottom: 30px;
       button {
-        width: 40px;
+        width: 100%;
+      }
+      button:not(:first-child){
+        margin-left: 10px;
       }
     }
   }
