--- a/webapp/src/features/properties/components/PropertyForm/PropertyForm.module.scss
+++ b/webapp/src/features/properties/components/PropertyForm/PropertyForm.module.scss
@@ -1,14 +1,12 @@
-.property-form-page {
-  &__content {
-    overflow-y: scroll;
-    height: 100%;
-  }
+.property-form {
   &__map {
-    height: 50%;
-    margin-top: 10px;
+    height: 100%;
+    min-height: 500px;
+    padding-bottom: 30px;
   }
 
   &__controls {
+    margin-top: 10px;
     margin-bottom: 15px;
     button:not(:last-child) {
       margin-right: 10px;
