--- a/webapp/src/features/properties/pages/PropertyDetailPage/PropertyDetailPage.module.scss
+++ b/webapp/src/features/properties/pages/PropertyDetailPage/PropertyDetailPage.module.scss
@@ -1,17 +1,23 @@
 .property-detail-page {
-  &__content {
+  &__content-container {
     overflow-y: scroll;
     height: 100%;
   }
-  &__map {
-    height: 50%;
-    margin-top: 10px;
+
+  &__content {
+    &-map{
+      height: 100%;
+      min-height: 500px;
+      padding-bottom:-20px;
+    }
   }
 
   &__controls {
-    margin-bottom: 15px;
+    margin-top: 15px;
     button:not(:last-child) {
       margin-right: 10px;
     }
+    display: flex;
+    flex-direction: row;
   }
 }
