Fix button-outline-variant bootstrap override

--- a/webapp/src/app/assets/styles/_boostrap-overrides.scss
+++ b/webapp/src/app/assets/styles/_boostrap-overrides.scss
@@ -13,7 +13,7 @@
 .btn-outline-primary {
   @include button-outline-variant(
     $primary,
-    $primary,
+    #fff,
     $primary,
     $primary,
   );
