Add inputs to property filters

--- a/webapp/src/app/components/RangeInput/RangeInput.module.scss
+++ b/webapp/src/app/components/RangeInput/RangeInput.module.scss
@@ -18,5 +18,16 @@
   &__label-values {
     color: $primary;
     font-size: 14px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__manual-controls {
+    display: flex;
+    flex-direction: row;
+    &-divider {
+      line-height: 37px;
+      margin: 0 2px;
+    }
   }
 }
