--- a/webapp/src/index.scss
+++ b/webapp/src/index.scss
@@ -1,5 +1,6 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import './app/assets/styles/boostrap-overrides';
+@import './app/assets/styles/variables';
 
 @font-face {
   font-family: 'MyFont';
@@ -23,4 +24,28 @@ html,
 .px15 {
   padding-left:15px;
   padding-right:15px;
+}
+
+.full-screen-spinner {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  .spinner-border {
+    width: 5rem;
+    height: 5rem;
+    border-width: 0.4rem;
+  }
+}
+
+.centered-spinner {
+  display: flex;
+  justify-content: center;
+  .spinner-border {
+    width: 3rem;
+    height: 3rem;
+    border-width: 0.2rem;
+  }
 }
