--- a/webapp/src/index.scss
+++ b/webapp/src/index.scss
@@ -49,3 +49,22 @@ html,
     border-width: 0.2rem;
   }
 }
+
+.dropzone {
+  background: #f5f5f5;
+  border: 1px dashed #c2c2c2;
+  border-radius: 3px;
+  text-align: center;
+  padding: 36px;
+  font-size: 12px;
+  font-weight: 600;
+
+  &__delete {
+    position: absolute;
+  }
+}
+
+.dropzone:hover {
+  background: lighten($primary, 20%);
+  border: 1px dashed #333;
+}
