Remove login background image on small screens

--- a/webapp/src/features/access/pages/AccessPage.module.scss
+++ b/webapp/src/features/access/pages/AccessPage.module.scss
@@ -16,5 +16,14 @@
   &__page {
     width: 50%;
   }
+
+  @media only screen and (max-width: 600px) {
+    &__image {
+      display: none;
+    }
+    &__page {
+      width: 100%;
+    }
+  }
   
 }
